# maci

./: .gitignore  AMACI_ADDNEWKEY_TEST_SUMMARY.md  AMACI_E2E_COMPLETE_FLOW_ANALYSIS.md  AMACI_E2E_DEBUG_COMPLETION_REPORT.md  AMACI_E2E_DEBUG_DEEP_DIVE.md  AMACI_E2E_DEBUG_GUIDE.md  AMACI_E2E_FINAL_REPORT.md  AMACI_E2E_FINAL_STATUS.md  AMACI_E2E_INVALID_PROOF_ANALYSIS.md  AMACI_E2E_SIMPLIFICATION_PLAN.md  AMACI_E2E_TEST_ANALYSIS.md  AMACI_E2E_TEST_DECISION.md  AMACI_E2E_TEST_IMPLEMENTATION_REPORT.md  AMACI_E2E_TEST_SUMMARY.md  AMACI_TESTS_IMPLEMENTATION_SUMMARY.md  AMACI_TEST_COMPLETION_REPORT.md  AMACI_TEST_DEBUG_REPORT.md  AMACI_TEST_FIX_FINAL_REPORT.md  AMACI_TEST_FIX_SUMMARY.md  AMACI_TEST_PROGRESS_SUMMARY.md  ARCHITECTURE_REVIEW.md  BINARY_TREE_MIGRATION_PROGRESS.md  BINARY_TREE_MIGRATION_SESSION_SUMMARY.md  CIRCUITS_TEST_FIX.md  CIRCUIT_FILES_UPDATE_COMPLETE.md  CI_CD_ISSUE_FIX.md  CI_CD_SETUP.md  CI_LINT_CONFIG_SOLUTION.md  Cargo.toml  DESIGN_CLARIFICATION.md  DESIGN_REVIEW_V2.md  E2E_CICD_DOCKER_FIX.md  E2E_CICD_FIX_SUMMARY.md  E2E_POSEIDON_INTEGRATION_SUMMARY.md  E2E_POSEIDON_TEST_PLAN.md  ELEMENT_SPACE_EVOLUTION.md  GET_NODE_QUERY_GUIDE.md  LEANTREE_TESTS_INTEGRATION_SUMMARY.md  MACI_FEE_STRUCTURE.md  MACI_INPUTHASH_FIX.md  (+35 more)
.changeset/: goofy-results-mate.md
.github/workflows/: README.md  changeset.yml  publish.yml  test.yml
artifacts/: checksums.txt
contracts/: UNIFIED_MACI_CONFIGURATION.md
contracts/amaci/: .gitignore  BATCH_PUBLISH_MESSAGE.md  CONTRACT_MESSAGE_HASH_UPDATES.md  Cargo.toml  OPTIMIZATION_REPORT.md
contracts/amaci/schema/: cw-amaci.json
contracts/amaci/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_all_results.json  response_to_get_delay_config.json  response_to_get_delay_records.json  response_to_get_fee_config.json  response_to_get_period.json  response_to_get_registration_config.json  response_to_get_tally_delay.json  response_to_get_vkeys.json  response_to_get_voting_time.json  response_to_query_registration_status.json  response_to_white_list.json
contracts/amaci/src/: circuit_params.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs.backup
contracts/amaci/src/multitest/: certificate_generator.rs  mod.rs  tests.rs
contracts/amaci/src/test/amaci_test/: logs.json
contracts/amaci/ts/: AMaci.client.ts  AMaci.types.ts
contracts/api-maci/: Cargo.toml
contracts/api-maci/schema/: cw-api-maci.json
contracts/api-maci/src/: circuit_params.rs  contract.rs  error.rs  lib.rs  msg.rs  plonk_parser.rs  state.rs  utils.rs.backup
contracts/api-maci/ts/: ApiMaci.client.ts  ApiMaci.types.ts
contracts/api-saas/: Cargo.toml
contracts/api-saas/schema/: cw-api-saas.json
contracts/api-saas/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_fee_grant_records.json  response_to_maci_contract.json  response_to_maci_contracts.json  response_to_operators.json
contracts/api-saas/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/api-saas/src/migrates/: migrate_v0_1_3.rs  mod.rs
contracts/api-saas/src/multitest/: mod.rs  tests.rs
contracts/api-saas/ts/: ApiSaas.client.ts  ApiSaas.types.ts
contracts/maci/: Cargo.toml
contracts/maci/.cargo/: config.toml
contracts/maci/schema/: cw-maci.json
contracts/maci/src/: circuit_params.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/maci/ts/: Maci.client.ts  Maci.types.ts
contracts/registry/: .gitignore  Cargo.toml  NOTICE
contracts/registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/registry/src/migrates/: README.md  migrate_v0_1_3.rs  migrate_v0_1_4.rs  migrate_v0_1_5.rs  migrate_v0_1_6.rs  mod.rs
contracts/registry/src/multitest/: certificate_generator.rs  mod.rs  tests.rs  tests.rs.bak
contracts/registry/src/test/: user_pubkey.json
contracts/registry/src/test/amaci_test/: logs.json
contracts/registry/ts/: Registry.client.ts  Registry.types.ts
contracts/test/: .gitignore  Cargo.toml  README.md  old-test-report.md  performance-summary.md  test-error-handling.sh  test-report-20251214-080323.md  test-report-20260224-210046.md
crates/crypto-test-gen/: Cargo.toml
crates/crypto-test-gen/src/: lib.rs
crates/maci-crypto/: Cargo.toml
crates/maci-utils/: Cargo.toml  README.md
crates/maci-utils/src/: babyjubjub.rs  conversions.rs  lib.rs  poseidon.rs  sha256_utils.rs
docs/: AddNewKey-Test-Summary.md  MACI_MECHANISM_EXPLAINED.md  PROCESS_MESSAGES_CIRCUIT_ANALYSIS.md  README.md  TESTING_SUMMARY.md  next.config.mjs  package.json
docs/app/: _meta.global.tsx  layout.tsx  sitemap.ts
docs/components/: Logo.tsx
docs/content/: article.mdx  index.mdx
e2e/: .gitignore  .mocharc.json  CHANGES_SUMMARY.md  CIRCUIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_FILES_UPDATE_REPORT.md  TIME_CONTROL_FIX_SUMMARY.md  TIME_ISSUE_RESOLUTION.md  TIME_OPTIMIZATION.md  TIME_OPTIMIZATION_FINAL.md  ZK_KIT_INTEGRATION_TESTS.md  debug-test.sh  package.json  tsconfig.json  tsconfig.test.json
e2e/circuits/: vkeys-2-1-1-5.json  vkeys-amaci-2-1-1-5.json  vkeys-amaci-4-2-2-25.json  vkeys-amaci-6-3-3-125.json  vkeys-amaci-9-4-3-125.json  vkeys-maci-2-1-1-5.json
e2e/crypto-test/: README.md  baby-jubjub-test-vectors.json  eddsa-poseidon-test-vectors.json  generate-vectors.ts  load-vectors.ts  test-vectors-rust.json  test-vectors.d.ts
e2e/poseidon-test/: .gitignore  README.md  generate-vectors.ts  load-vectors.ts  test-vectors.d.ts
e2e/scripts/: build-wasm-local.sh  checkCircuits.ts  copyLatestCircuits.ts  downloadZkeys.ts  extractVkeys.ts
e2e/src/: index.ts
e2e/tests/: AddNewKey.E2E.README.md  BATCH_PUBLISH_TEST_GUIDE.md  STATE_TREE_TEST_GUIDE.md  add-new-key.e2e.test.ts  advanced.e2e.test.ts  amaci-crypto-core.e2e.test.ts  amaci-deactivate.e2e.test.ts  amaci.e2e.test.ts  baby-jubjub.e2e.test.ts  batch-publish.e2e.test.ts  certificate.test.ts  crypto-consistency.e2e.test.ts  deactivate-root.e2e.test.ts  eddsa-poseidon.e2e.test.ts  maci.e2e.test.ts  poseidon-consistency.e2e.test.ts  registry.e2e.test.ts  state-tree.e2e.test.ts
(+167 files in other folders)
