[package]
name = "cw-amaci"
version = "0.1.0"
authors = ["feng"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
mt = ["library", "anyhow", "cw-multi-test", "secp256k1", "base64", "num-bigint"]


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cw-storage-plus = "1.0.1"
cosmwasm-schema = "1.1.0"
cw2 = "1.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
bellman-ce-verifier = { git = "https://github.com/DoraFactory/snarkjs-bellman-adapter.git", default-features = false, version = "0.1.0" }
hex = "0.4"
pairing_ce = { git = "https://github.com/matter-labs/pairing.git" }
ff_ce = "0.14.3"
sha2 = { version = "0.9.5", default-features = false }
serde_json = "1.0"

# Shared utilities library
maci-utils = { path = "../../crates/maci-utils" }

anyhow = { version = "1.0", optional = true }
cw-multi-test = { version = "0.20.0", optional = true }
secp256k1 = { version = "0.27", optional = true }
base64 = { version = "0.21", optional = true }
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_4"] }
derivative = "2"
serde_json = "1.0"
num-bigint = "0.4.3"
secp256k1 = "0.27"
base64 = "0.21"
