[package]
name = "cw-api-saas"
version = "0.1.2"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw-utils = "1.0.1"
thiserror = { version = "1.0.31" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0"
bech32 = "0.9.1"
cw-amaci = { path = "../amaci", features = ["library"] }
cw-api-maci = { path = "../api-maci", features = ["library"] }
cw-amaci-registry = { path = "../registry", features = ["library"] }
anyhow = {version = "1.0", optional = true}
cw-multi-test = {version = "0.20.0", optional = true}
cosmos-sdk-proto = { version = "0.19.0", default-features = false }
prost = "0.11"
prost-types = "0.11"

[dev-dependencies]
cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_4"] }
anyhow = "1.0"
cw-amaci-registry = { path = "../registry", features = ["mt"] }
cw-amaci = { path = "../amaci", features = ["mt"] }
cw-api-maci = { path = "../api-maci", features = ["mt"] }

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
mt = ["library", "anyhow", "cw-multi-test"]
