[package]
authors = ["feng"]
edition = "2021"
name = "cw-amaci-registry"
version = "0.1.4"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
mt = ["library", "anyhow", "cw-multi-test", "secp256k1"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = "1.5.0"
cw-controllers = "1.1.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw4 = "1.1.0"
hex = "0.4"
schemars = "0.8.10"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}
# pairing_ce = { git = "https://github.com/matter-labs/pairing.git" }
anyhow = {version = "1.0", optional = true}
bech32 = "0.9.1"
cw-amaci = {path = "../amaci", features = ["library"]}
cw-multi-test = {version = "0.20.0", optional = true}
num-bigint = "0.4.3"
num-traits = "0.2"
base64 = "0.21.5"
secp256k1 = { version = "0.27.0", optional = true }
serde_json = "1.0"
sha2 = "0.10.6"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
base64 = "0.21.5"
cw-amaci = {path = "../amaci", features = ["mt"]}
cw-multi-test = "0.20.0"
derivative = "2"
num-bigint = "0.4.3"
secp256k1 = "0.27.0"
serde_json = "1.0"
sha2 = "0.10.6"
