[package]
name = "maci-utils"
version = "0.1.0"
authors = ["MACI Team"]
edition = "2021"
description = "Shared utility functions for MACI contracts"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "generate_test_vectors"
path = "src/bin/generate_test_vectors.rs"

[dependencies]
cosmwasm-std = { version = "1.5.0", default-features = false }
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
poseidon-rs = "0.0.10"
sha2 = { version = "0.9.5", default-features = false }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Feature for testing
std = []

